# amplifier-bundle-tts

./: .gitignore  README.md  bundle.md  main.py  requirements.txt  run.sh
.amplifier/: settings.yaml  text-to-speech-dev.md
.amplifier/modes/: scene-design.md  voice-performance.md  voice-scene.md
.amplifier/skills/: voice-scene.md
.amplifier/skills/voice-scene/: SKILL.md
behaviors/: dia.yaml  gemini-tts.yaml  omnivoice.yaml  qwen3-tts.yaml
content/: audiobook_script.md  story.txt
context/: dia.md  gemini-tts.md  omnivoice-awareness.md  omnivoice.md  qwen3-tts.md
docs/: audiobook-project.md
modules/tool-dia/: pyproject.toml
modules/tool-dia/amplifier_module_tool_dia/: __init__.py
modules/tool-gemini-tts/: pyproject.toml
modules/tool-gemini-tts/amplifier_module_tool_gemini_tts/: __init__.py
modules/tool-omnivoice/: pyproject.toml
modules/tool-omnivoice/amplifier_module_tool_omnivoice/: __init__.py
modules/tool-qwen3-tts/: pyproject.toml
modules/tool-qwen3-tts/amplifier_module_tool_qwen3_tts/: __init__.py
research/arena/: arena_chatterbox.py  arena_chatterbox_v2.py  arena_orpheus.py  arena_orpheus_v2.py  arena_qwen3tts.py  arena_qwen3tts_v2.py
scenes/: 01-the-kitchen.md  02-the-bear.md  03-blaze.md  04-the-search.md  05-bedtime-story.md  06-the-discovery.md  07-the-reckoning.md  CASTING.md  chase-lia-kitchen.md
scenes/01-kitchen/: 01-kitchen-01-narrator.md  01-kitchen-02-chase-lia.md
scenes/02-bear/: 02-bear-01-narrator.md  02-bear-02-chase-jack.md
scenes/03-blaze/: 03-blaze-01-narrator.md  03-blaze-02-blaze-crum.md  03-blaze-03-blaze-henchman.md
scenes/04-search/: 04-search-01-narrator.md  04-search-02-blaze-phone.md
scenes/05-bedtime/: 05-bedtime-01-narrator.md  05-bedtime-02-chase-jack.md
scenes/06-discovery/: 06-discovery-01-narrator.md  06-discovery-02-blaze-men.md  06-discovery-03-narrator.md  06-discovery-04-blaze-men.md
scenes/07-midnight/: 07-midnight-01-narrator.md
scenes/08-reckoning/: 08-reckoning-01-narrator.md  08-reckoning-02-chase-blaze.md  08-reckoning-03-narrator.md  08-reckoning-04-narrator.md
scripts/: generate_audiobook.py  generate_audiobook_qwen.py  make_seeds.py  stitch.py  trim_and_stitch.py
static/: index.html
