[project]
name = "amplifier-module-tool-dia"
version = "1.0.0"
description = "Amplifier tool module — dia_generate_speech via nari-labs/Dia-1.6B-0626"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "dia @ git+https://github.com/nari-labs/dia.git",
    "soundfile>=0.12",
    "numpy>=1.24",
    "torch>=2.1",
]
# NOTE: amplifier-core is a peer dep provided by the Amplifier runtime.

[project.entry-points."amplifier.modules"]
tool-dia = "amplifier_module_tool_dia:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_tool_dia"]

# ---------------------------------------------------------------------------
# Platform-specific torch sources (uv only)
# macOS Apple Silicon → MPS via standard PyPI wheel
# Linux x86_64 + NVIDIA → CUDA (change index as needed)
# ---------------------------------------------------------------------------

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]

[[tool.uv.index]]
name     = "pytorch-cu124"
url      = "https://download.pytorch.org/whl/cu124"
explicit = true
