[project]
name = "amplifier-module-tool-gemini-tts"
version = "1.0.0"
description = "Amplifier tool module — gemini_generate_speech via Google Gemini TTS API"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "google-genai>=1.0",
]
# NOTE: amplifier-core is a peer dep provided by the Amplifier runtime.
# Requires GOOGLE_API_KEY environment variable.

[project.entry-points."amplifier.modules"]
tool-gemini-tts = "amplifier_module_tool_gemini_tts:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_tool_gemini_tts"]
