[project]
name = "amplifier-module-tool-omnivoice"
version = "0.3.0"
description = "Amplifier tool module — generate speech via OmniVoice (local) or Gemini TTS (cloud)"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "torch>=2.1",
    "torchaudio>=2.1",
    "omnivoice>=0.1.3",
    "soundfile>=0.12",
    "numpy>=1.24",
    "google-genai>=1.0",
]
# NOTE: amplifier-core is a peer dep provided by the Amplifier runtime.
# Never declare it here — it will cause version conflicts.

[project.entry-points."amplifier.modules"]
tool-omnivoice = "amplifier_module_tool_omnivoice:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_tool_omnivoice"]

# ---------------------------------------------------------------------------
# torch / torchaudio — platform-specific wheel sources  (uv only)
#
# Platform              Source              Runtime acceleration
# ─────────────────     ──────────────────  ─────────────────────────
# macOS arm64           PyPI (default)      MPS  (Apple Silicon Metal)
# macOS x86_64          PyPI (default)      CPU
# Linux  x86_64 + GPU   pytorch-cu124       CUDA 12.4  ← change if needed
# Linux  x86_64  CPU    pytorch-cu124       CPU  (CUDA wheels run on CPU too)
# Linux  arm64          PyPI (default)      CPU  (Graviton, Pi, etc.)
# Windows               PyPI (default)      CPU  (CUDA: add win32 marker below)
#
# IMPORTANT: Do NOT use the pytorch-cpu index for macOS — it strips MPS support.
#            The standard PyPI wheel for darwin/arm64 includes MPS built-in.
#
# To switch CUDA version: change the marker's index name AND the [[tool.uv.index]]
# entry below.  Available: cu118 · cu121 · cu124 · cu128 · cpu
# ---------------------------------------------------------------------------

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
    # Windows + NVIDIA (uncomment to enable):
    # { index = "pytorch-cu124", marker = "sys_platform == 'win32'" },
]
torchaudio = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
    # { index = "pytorch-cu124", marker = "sys_platform == 'win32'" },
]

# Active CUDA index — change url + name to match your CUDA version
[[tool.uv.index]]
name     = "pytorch-cu124"
url      = "https://download.pytorch.org/whl/cu124"
explicit = true   # only used for torch/torchaudio, not for other packages

# ── Alternate indexes (swap name above and uncomment one block) ────────────

# [[tool.uv.index]]
# name     = "pytorch-cu128"   # RTX 50xx / Blackwell / latest CUDA toolkit
# url      = "https://download.pytorch.org/whl/cu128"
# explicit = true

# [[tool.uv.index]]
# name     = "pytorch-cu121"
# url      = "https://download.pytorch.org/whl/cu121"
# explicit = true

# [[tool.uv.index]]
# name     = "pytorch-cu118"   # Older setups: Turing / Ampere legacy
# url      = "https://download.pytorch.org/whl/cu118"
# explicit = true

# [[tool.uv.index]]
# name     = "pytorch-cpu"     # CPU-only everywhere (no CUDA, no MPS)
# url      = "https://download.pytorch.org/whl/cpu"
# explicit = true
