[project]
name = "amplifier-module-tool-qwen3-tts"
version = "1.0.0"
description = "Amplifier tool module — qwen3_design_speech and qwen3_clone_speech via Qwen3-TTS"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "qwen-tts>=0.1.1",
    "soundfile>=0.12",
    "numpy>=1.24",
    "torch>=2.1",
    "torchaudio>=2.1",
]
# NOTE: amplifier-core is a peer dep provided by the Amplifier runtime.

[project.entry-points."amplifier.modules"]
tool-qwen3-tts = "amplifier_module_tool_qwen3_tts:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_tool_qwen3_tts"]

# ---------------------------------------------------------------------------
# Platform-specific torch sources (uv only)
# macOS Apple Silicon → MPS via standard PyPI wheel
# Linux x86_64 + NVIDIA → CUDA (change index as needed)
# ---------------------------------------------------------------------------

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]
torchaudio = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]

[[tool.uv.index]]
name     = "pytorch-cu124"
url      = "https://download.pytorch.org/whl/cu124"
explicit = true
